[workspace]
members = [
    "relay"
]
default-members = [
    "relay"
]
resolver = "2"

[package]
name = "dc-devices"
version = "0.1.0"
authors = [
    "Tushar Shah <twoshark@gmail.com>",
]

[[bin]]
name = "relay"
path = "relay/Cargo.toml"

[profile.dev]
debug     = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"