[package]
name = "dc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow       = "=1.0.75"
log = { version = "0.4.2", default-features = false }
esp-idf-svc = { version = "0.48.0", default-features = false, features = ["alloc"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
wifi         = { path = "../wifi" }

[build-dependencies]
embuild = "=0.31.4"

[lib]
name = "dc"
path = "src/lib.rs"
