[package]
name = "relay"
version = "0.1.0"
authors = ["Tushar Shah <twoshark@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
anyhow       = "=1.0.75"
log = { version = "0.4.2", default-features = false }
esp-idf-svc = { version = "0.47.3", default-features = false }
embedded-svc = "=0.27.0"
shtcx        = "=0.11.0"
toml-cfg     = "=0.1.3"
wifi         = { path = "../wifi" }

[build-dependencies]
embuild = "0.31.3"
