[package]
name    = "wifi"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = "=1.0.75"
esp-idf-svc = { version = "0.47.3", default-features = false }
log         = "=0.4.20"

[build-dependencies]
embuild = "=0.31.4"

[dev-dependencies]
toml-cfg = "=0.1.3"

[lib]
name = "wifi"
path = "src/lib.rs"
